--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
+    "@nestjs/config": "^1.0.1",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/swagger": "^5.0.9",
     "@nestjs/testing": "^8.0.0",
