--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nest-modules/mailer": "^1.3.22",
     "@nestjs-modules/mailer": "^1.6.0",
+    "@nestjs/bull": "^0.4.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^7.0.0",
@@ -31,6 +32,7 @@
     "@nestjs/platform-socket.io": "^8.0.7",
     "@nestjs/schedule": "^1.0.1",
     "@nestjs/typeorm": "^8.0.2",
+    "bull": "^3.29.2",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "mysql2": "^2.3.0",
@@ -50,6 +52,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/swagger": "^5.0.9",
     "@nestjs/testing": "^8.0.0",
+    "@types/bull": "^3.15.4",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
