--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bull": "^3.29.2",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "compressing": "^1.5.1",
     "mysql2": "^2.3.0",
     "nestjs-status-monitor": "^1.0.1",
     "nodemailer": "^6.6.5",
